fix ing break on small desktop size

--- a/css/style_desktop.less
+++ b/css/style_desktop.less
@@ -59,8 +59,8 @@ figure.fig_half {
 }
 
 figure img.worldmap {
-    width: auto;
     height: 226px;
+    max-width: 410px;
 }
 
 .gallery_article div {
